@startuml
title Simple Factory
note  top of  Factory
依赖注入(实现/继承关系)工厂模式
end note

class Factory{
    +Create(enum)
} 

interface Production{
	+Operate(string)
}
class ConcreteProductionA{
	+Operate(string)
}
class ConcreteProductionB{
	+Operate(string)
}

Client -right->Factory
Factory .right.> Production : Create(enum)
Production  <|-down- ConcreteProductionA
Production  <|-down- ConcreteProductionB
@enduml